Arts & Crafts Changelog
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
V1.1.3
Bug Fixes
• Fixed Dyed flower pots become normal after taking the flower out




V1.1.2
Bug Fixes
• Fixed Chalk Sticks not being in Creative Category for some people
• Fixed Chalk Sticks not showing up in JEI for some people!
Creative Category
• Chalk Sticks are now put after TNT minecarts
Recipes
• Added Bleached Chalk Stick Recipe!






V1.1.0
Code Changes
• Refactored Code and Packages
• Got rid of an unused mixin
• Removed Mixin Extras
Creative Category
• Paintbrushes are now put after the brush item
Bug Fixes
• Fixed Paintbrushes not being in Creative Category for some people
• Fixed Paintbrushes not showing up in JEI for some people!
Recipes
• Added Bleach Decorated Pot Recipe
• Added Bleachdew Paintbrush Recipe!
Lang
• Added Ukraine Translations (uk_ua.json) Thank you Unroman!
Block Features
• You can now make chalk dust glow with glow ink sacs!





V1.0.3
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Code Changes
• Refactored a bunch of classes
• Got rid of unused code
• The code is now cleaner and easier to find things
••• THIS WILL BREAK WITH COMPAT MOD V1.0.2 AND BELOW








V1.0.2
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Bug Fixes
• Fixed Bleached Chalk Stick crash with Jade Installed
• Fixed Bleached Chalk Stick spamming logs with One Probe Installed
• Fixed Pick blocking bleached chalk dust crash