@@ -21,8 +21,8 @@ fabric_version=0.100.1+1.21
 fabric_loader_version=0.15.11
 
 # NeoForge
-neoforge_version=21.0.6-beta
-neoforge_loader_version_range=[2,)
+neoforge_version=21.0.42-beta
+neoforge_loader_version_range=[4,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
