@@ -1,7 +1,7 @@
 {
   "homepage": "https://curseforge.com/minecraft/mc-mods/arts-and-crafts",
   "promos": {
-    "1.21-latest": "1.1.2",
-    "1.21-recommended": "1.1.2"
+    "1.21-latest": "1.1.3",
+    "1.21-recommended": "1.1.3"
   }
 }
